--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "firebase": "^10.12.3",
     "framer-motion": "^11.2.13",
+    "immer": "^10.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.24.1",
     "tailwind-merge": "^2.4.0"
   },
